Footer dividers and home page divider update

--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
             <p class="full">BuNker11<br>54-60 Heene Rd<br>Worthing, West Sussex, BN11 3RG</p>
             <p class="short">BuNker11<br>54-60 Heene Rd<br>Worthing</p>
         </div>
-        <div class="footer-section">
+        <div class="footer-section tot">
             <h4>TOT Social Media</h4>
             <ul>
                 <li><a href="https://www.facebook.com/p/TOT-Presents-100083193887876/" target="_blank"><img src="{{ url_for('static', filename='images/footer/facebook-icon.png') }}" alt="Facebook">Facebook</a></li>
@@ -69,7 +69,7 @@
                 <li><a href="https://www.youtube.com/channel/UCDvFWE_kn242G_JzyuC_StA" target="_blank"><img src="{{ url_for('static', filename='images/footer/youtube-icon.png') }}" alt="YouTube">YouTube</a></li>
             </ul>
         </div>
-        <div class="footer-section">
+        <div class="footer-section hammerdown">
             <h4>Hammerdown Social Media</h4>
             <ul>
                 <li><a href="https://www.facebook.com/HammerdownFestival" target="_blank"><img src="{{ url_for('static', filename='images/footer/facebook-icon.png') }}" alt="Facebook">Facebook</a></li>
