--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
 
 <!-- Barbed Wire Divider -->
 <div class="divider barbed-wire">
-  <img src="/static/images/barb2.png" alt="Barbed Wire Divider" />
+  <img src="/static/images/barb.png" alt="Barbed Wire Divider" />
 </div>
 
 
