--- a/templates/past_events.html
+++ b/templates/past_events.html
@@ -12,11 +12,13 @@
     <div class="events-grid">
         {% for event in events %}
         <div class="event-card">
+            <a href="{{ url_for('event_detail', event_id_title=event.id ~ '-' ~ event.title|replace(' ', '-') ) }}">
             <img src="{{ url_for('static', filename=event.image_url) }}" alt="Event Image" class="event-image">
             <div class="event-details">
                 <h3 class="event-title">{{ event.title }}</h3>
                 <p class="event-datetime">{{ event.date.strftime('%I:%M %p').lstrip('0') }} - {{ event.formatted_date }}</p>
             </div>
+            </a>
         </div>
         {% else %}
         <p>No past events to display.</p>
