Event page styling

--- a/templates/event.html
+++ b/templates/event.html
@@ -3,7 +3,7 @@
 {% block title %}{{ event.title }} | BuNker11{% endblock %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/event_detail.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/event.css') }}">
 {% endblock %}
 
 {% block content %}
