Updated contact and venue page, added new images to home screen

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
                 <li><a href="{{ url_for('past_events') }}" class="{% if request.endpoint == 'past_events' %}active{% endif %}">Past Events</a></li>
                 <li><a href="{{ url_for('podcast') }}" class="{% if request.endpoint == 'podcast' %}active{% endif %}">Podcast</a></li>
                 <li><a href="{{ url_for('contact') }}" class="{% if request.endpoint == 'contact' %}active{% endif %}">Contact</a></li>
-                <li><a href="{{ url_for('accessibility') }}" class="{% if request.endpoint == 'accessibility' %}active{% endif %}">Accessibility</a></li>
+                <li><a href="{{ url_for('venue') }}" class="{% if request.endpoint == 'venue' %}active{% endif %}">Venue</a></li>
             </ul>
         </nav>
     </header>
