--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,7 @@
         <img src="{{ url_for('static', filename='images/slideshow/slideshow3.jpg') }}" alt="Slideshow Image 3">
         <img src="{{ url_for('static', filename='images/slideshow/slideshow4.jpg') }}" alt="Slideshow Image 4">
         <img src="{{ url_for('static', filename='images/slideshow/slideshow5.jpg') }}" alt="Slideshow Image 5">
+        <img src="{{ url_for('static', filename='images/slideshow/slideshow6.jpg') }}" alt="Slideshow Image 6">
     </div>
 </section>
 
