--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,9 @@
 <body>
     <header>
         <div class="logo">
-            <img src="{{ url_for('static', filename='images/bunker11_invis.png') }}" alt="BuNker11 Logo">
+            <a href="{{ url_for('admin') }}">
+                <img src="{{ url_for('static', filename='images/bunker11_invis.png') }}" alt="BuNker11 Logo">
+            </a>
         </div>
         <nav>
             <ul>
