--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
 
 <section class="venue-description">
     <h2>Welcome to BuNker11</h2>
-    <p>BuNker11 (BN11) is your go-to venue for live music, gigs, and unforgettable performances. Located in the basement of the Charles Dickens pub, we host monthly gigs featuring unique artists and bands. Stay tuned for upcoming events and explore our past performances.</p>
+    <p>BuNker11 (BN11) is a the home of grass roots live and original music in the West End of Worthing. The venue currently hosts regular monthly gigs by TOT Presents and Hammerdown music promoters as well as some gigs by Paralytic Promotions. </p>
 </section>
 
 <!-- Barbed Wire Divider -->
