--- a/templates/venue.html
+++ b/templates/venue.html
@@ -25,12 +25,10 @@
                 <div class="venue-details-category">
                     <h3>Facilities</h3>
                     <ul class="venue-details-list">
-                        <li><strong>Capacity:</strong> 120 people</li>
-                        <li><strong>Bar:</strong> Full bar available</li>
+                        <li><strong>Capacity:</strong> 80 people</li>
+                        <li><strong>Bar:</strong> Bar available until xx:xxam</li>
                         <li><strong>Toilets:</strong> On-site</li>
-                        <li><strong>Artist Green Room:</strong> Yes</li>
-                        <li><strong>Load-in:</strong> Rear alley access, no ramp</li>
-                        <li><strong>Parking:</strong> Limited on-street parking nearby</li>
+                        <li><strong>Parking:</strong> Free</li>
                     </ul>
                 </div>
                 <div class="venue-details-category">
@@ -40,7 +38,6 @@
                         <li><strong>PA System:</strong> 2000W, 16-channel mixer</li>
                         <li><strong>Monitors:</strong> 2x floor wedges</li>
                         <li><strong>Lighting:</strong> Basic stage wash, 2x moving heads</li>
-                        <li><strong>Backline:</strong> Drum kit (bring your own breakables), 2x guitar amps, 1x bass amp</li>
                     </ul>
                 </div>
             </div>
