--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,7 @@ html, body {
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Alike Angular', serif;
     background: url('../images/background1.jpg') no-repeat center center fixed;
     background-size: cover;
     color: #d4af37;
