--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
     <footer>
         <div class="footer-section address">
             <h4>Venue Info</h4>
-            <p class="full">BuNker11<br>54-60 Heene Rd<br>Worthing, West Sussex, BN11 3RG</p>
+            <p class="full">BuNker11<br>54-60 Heene Rd, Worthing,<br>West Sussex, BN11 3RG</p>
             <p class="short">BuNker11<br>54-60 Heene Rd<br>Worthing</p>
         </div>
         <div class="footer-section tot">
