--- a/templates/venue.html
+++ b/templates/venue.html
@@ -7,7 +7,6 @@
 {% endblock %}
 
 {% block content %}
-<main>
     <section class="venue-section">
         <div class="venue-accessibility">
             <h2>Accessibility Information</h2>
@@ -34,14 +33,18 @@
                 <div class="venue-details-category">
                     <h3>Equipment</h3>
                     <ul class="venue-details-list">
-                        <li><strong>Stage Size:</strong> 5m x 3m</li>
-                        <li><strong>PA System:</strong> 2000W, 16-channel mixer</li>
-                        <li><strong>Monitors:</strong> 2x floor wedges</li>
-                        <li><strong>Lighting:</strong> Basic stage wash, 2x moving heads</li>
+                        <li><strong>Sennheiser e600 kick mic:</strong> x1</li>
+                        <li><strong>E604:</strong> x4 (toms and snare)</li>
+                        <li><strong>E609:</strong> x2 (guitar cabs)</li>
+                        <li><strong>E600 condenser pencil mics:</strong> x2</li>
+                        <li><strong>SM58:</strong> x3</li>
+                        <li><strong>DI box:</strong> x2</li>
+                        <li><strong>XLR cables:</strong> x16</li>
+                        <li><strong>Two 58 type mics</strong></li>
+                        <li><strong>Stage snake:</strong> 16x4</li>
                     </ul>
                 </div>
             </div>
         </div>
     </section>
-</main>
 {% endblock %}
