--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,14 @@
 
 {% block content %}
 <section class="login-section">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% set category, message = messages[-1] %}
+        <div class="flash-messages">
+          <div class="flash-message {{ category }}">{{ message }}</div>
+        </div>
+      {% endif %}
+    {% endwith %}
     <a href="javascript:history.length > 1 ? history.back() : window.location.href='{{ url_for('home') }}';" class="back-arrow" aria-label="Go back">
         <svg width="32" height="32" viewBox="0 0 32 32" fill="none" style="vertical-align: middle;">
             <path d="M20 28L8 16L20 4" stroke="#f5c518" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
