--- a/templates/base.html
+++ b/templates/base.html
@@ -59,12 +59,18 @@
 
     <footer>
         <div class="footer-section address">
-            <h4>Venue Info</h4>
+            <h4>
+                <img src="{{ url_for('static', filename='images/icons/location_pin.png') }}" alt="Location" class="footer-icon">
+                Venue Info
+            </h4>
             <p class="full">BuNker11<br>54-60 Heene Rd, Worthing,<br>West Sussex, BN11 3RG</p>
             <p class="short">BuNker11<br>54-60 Heene Rd<br>Worthing</p>
         </div>
         <div class="footer-section tot">
-            <h4>TOT Social Media</h4>
+            <h4>
+                <img src="{{ url_for('static', filename='images/tot_record-invis.png') }}" alt="TOT Presents" class="footer-icon">
+                TOT Social Media
+            </h4>
             <ul>
                 <li><a href="https://www.facebook.com/p/TOT-Presents-100083193887876/" target="_blank"><img src="{{ url_for('static', filename='images/footer/facebook-icon.png') }}" alt="Facebook">Facebook</a></li>
                 <li><a href="https://www.instagram.com/totpresents/" target="_blank"><img src="{{ url_for('static', filename='images/footer/instagram-icon.png') }}" alt="Instagram">Instagram</a></li>
@@ -72,7 +78,10 @@
             </ul>
         </div>
         <div class="footer-section hammerdown">
-            <h4>Hammerdown Social Media</h4>
+            <h4>
+                <img src="{{ url_for('static', filename='images/hammerdown_gold.png') }}" alt="Hammerdown" class="footer-icon">
+                Hammerdown Social Media
+            </h4>
             <ul>
                 <li><a href="https://www.facebook.com/HammerdownFestival" target="_blank"><img src="{{ url_for('static', filename='images/footer/facebook-icon.png') }}" alt="Facebook">Facebook</a></li>
                 <li><a href="https://www.instagram.com/hammerdownfestival/" target="_blank"><img src="{{ url_for('static', filename='images/footer/instagram-icon.png') }}" alt="Instagram">Instagram</a></li>
