--- a/static/css/base.css
+++ b/static/css/base.css
@@ -172,6 +172,14 @@ footer .footer-section.tot::after {
     right: -15px;
 }
 
+.footer-icon {
+    width: 24px;
+    height: 24px;
+    object-fit: contain;
+    vertical-align: middle;
+    margin-right: 6px;
+}
+
 /* Responsive Design */
 @media (max-width: 768px) {
     /* Header Navigation */
