--- a/static/css/home.css
+++ b/static/css/home.css
@@ -277,3 +277,18 @@
     color: #b22222;
 }
 
+/* Past Events Section */
+.past-events {
+    padding: 40px 20px;
+    background-color: #111;
+    color: #faa400;
+    text-align: center;
+}
+
+.past-events h2 {
+    color: #ec220c;
+    font-family: 'Alike Angular', serif;
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    letter-spacing: 1px;
+}
