--- a/templates/past_events.html
+++ b/templates/past_events.html
@@ -3,7 +3,7 @@
 {% block title %}Past Events - BuNker11{% endblock %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/past_events.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
 {% endblock %}
 
 {% block content %}
@@ -11,15 +11,16 @@
     <h2>Past Events</h2>
     <div class="events-grid">
         {% for event in events %}
-        <div class="event-card">
-            <a href="{{ url_for('event_detail', event_id_title=event.id ~ '-' ~ event.title|replace(' ', '-') ) }}">
-            <img src="{{ url_for('static', filename=event.image_url) }}" alt="Event Image" class="event-image">
-            <div class="event-details">
-                <h3 class="event-title">{{ event.title }}</h3>
+        <a href="{{ url_for('event_detail', event_id_title=event.id ~ '-' ~ event.title|replace(' ', '-') ) }}">
+            <div class="event-card">
+                <img src="{{ url_for('static', filename=event.image_url) }}" alt="Event Image" class="event-image">
+                <div class="event-details">
+                    <h3 class="event-title">{{ event.title }}</h3>
+                    <div class="spacer"></div>
+                </div>
                 <p class="event-datetime">{{ event.date.strftime('%I:%M %p').lstrip('0') }} - {{ event.formatted_date }}</p>
             </div>
-            </a>
-        </div>
+        </a>
         {% else %}
         <p>No past events to display.</p>
         {% endfor %}
